# boundedness_walking

./: .gitignore  CMakeLists.txt
config/: centauro.yaml
include/multidof_walking/controllers/: momentum.h
include/multidof_walking/lti/: lipm.h
include/multidof_walking/robot/: robot_state.h
include/multidof_walking/trajectory/: foot_trajectory.h
include/multidof_walking/wpg/: .lqr_walker.h.kate-swp  lqr_walker.h  simple_walker.h
matlab/: setup_variables.m  test_1.slx
src/: foot_trajectory.cpp  lipm.cpp  lqr_walker.cpp  simple_walker.cpp  test_1.cpp
src/gui/: gui.cmake  walking_gui.cpp  walking_gui_widget.cpp  walking_gui_widget.h
src/gui/ui/: ui.qrc  walking_gui_widget.ui
xbotcore/: CMakeLists.txt
xbotcore/configs/: config.yaml
xbotcore/mdof_walking_plugin/: CMakeLists.txt  README.md
xbotcore/mdof_walking_plugin/include/mdof_walking_plugin/: mdof_walking_plugin_plugin.h
xbotcore/mdof_walking_plugin/src/: mdof_walking_plugin_plugin.cpp
